--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,9 @@ body
 .page-item.active .page-link{
     background-color: var(--primary-color)
 }
+.btn-floating{
+    box-shadow: none;
+}
+.bg-secondary-color{
+    background-color: var(--secondary-color)
+}
